--- a/index.html
+++ b/index.html
@@ -3,135 +3,172 @@
 -->
 <!DOCTYPE html>
 <html>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <head>
   <meta charset="UTF-8">
   <title>WebRTC SDK Sample App</title>
 </head>
 
 <style type="text/css">
-  body {
-  margin-left: 10px;
-  background-color: #dde4ee;
-  }
-  
-  video {
-    margin: auto;
+
+body {
+	margin-left: 10px;
+	background-color: #dde4ee;
+}
+
+video {
+	margin: auto;
 	display: block;
-    vertical-align: middle;
-    width: 95%;
-    background: #444;
-    float: left;
+	vertical-align: middle;
+	width: 95%;
+	background: #444;
+	float: left;
 	border-radius: 20px;
 	text-align: center;
 	margin-left: 2%;
 	margin-bottom: 2%;
-  }
-  div#media {
-    overflow: hidden;
-  }
-  
-    legend {
+}
+
+div#media {
+	overflow: hidden;
+}
+
+legend {
 	background-color: white;
-    font-size: 1.2em;
+	font-size: 1.2em;
 	border-radius: 5px;
 	padding: 2px;
-	}
-	
-	fieldset {
+}
+
+fieldset {
 	background-color: white;
 	border: 0px;
 	margin: 10px;
 	-moz-box-shadow:0px 0px 2px #808080;
-    -webkit-box-shadow:0px 0px 2px #808080;
-    box-shadow:0px 0px 2px #808080;
+	-webkit-box-shadow:0px 0px 2px #808080;
+	box-shadow:0px 0px 2px #808080;
 	border-radius: 5px;
-	}
-  
-    .controls {
+}
+
+.controls {
 	border-radius: 5px;
 	font-size: 1.1em;
 	margin-top: 5px;
-	}
-	
-    #joinMeeting{
-    background-color: #3ac97a;
-    border: none;
-    color: white;
-    padding: 5px 15px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    }
-	#joinMeeting:hover {
-	  background-color: #dde4ee;
-	  color: #204e74;
-	}
-	
-    #leaveMeeting{
-    background-color: #204e74;
-    border: none;
-    color: white;
-    padding: 5px 15px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    }
-    #leaveMeeting:hover{
-	  background-color: #dde4ee;
-	  color: #204e74;
-	}
-	
-	
-	.videodiv {
+	display: inline-block;
+}
+
+#joinMeeting{
+	background-color: #3ac97a;
+	border: none;
+	color: white;
+	padding: 5px 15px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+}
+#joinMeeting:hover {
+	background-color: #dde4ee;
+	color: #204e74;
+}
+
+#leaveMeeting{
+	background-color: #204e74;
+	border: none;
+	color: white;
+	padding: 5px 15px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+}
+#leaveMeeting:hover{
+	background-color: #dde4ee;
+	color: #204e74;
+}
+
+
+.videodiv {
 	background-color: white;  // #12a8f1;
-    margin: auto;
+	margin: auto;
 	margin: 5px;
-	width: 40%;
 	display: inline-block;
 	border-radius: 10px;
+	max-width: 800px;
 	-moz-box-shadow:0px 0px 7px #000000;
-    -webkit-box-shadow:0px 0px 7px #000000;
-    box-shadow:0px 0px 7px #000000;
+	-webkit-box-shadow:0px 0px 7px #000000;
+	box-shadow:0px 0px 7px #000000;
+}
+
+.remotevid{
+	width: 100%;
+}
+
+
+.localvid {
+	width : 50%;
+	max-width: 150px;
+	margin-left: 25%;
+}
+
+
+.vidtitle {
+	text-align: center;
+	background-color: #1478c7;
+	color: #dde4ee;
+}
+
+.remvidtitle {
+	font-size: 1em;
+}
+
+
+.locvidtitle {
+	font-size: .7em;
+	padding-top: 1px;
+	padding-bottom: 1px;
+}
+
+@media only screen and (min-width: 768px) {
+	.remotevid{
+		width: 70%;
 	}
 	
 	.localvid {
-	width : 20%;
+		width : 25%;
+		max-width: 250px;
+		margin-left: 5%;
 	}
 	
 	.remvidtitle {
-	   text-align: center;
-	   font-size: 2em;
-	   background-color: #1478c7;
-	   color: #dde4ee;
+		font-size: 2em;
 	}
-	
+
+
 	.locvidtitle {
-	   text-align: center;
-	   align-items: center;
-	   font-size: 1em;
-	   vertical-align: middle;
-	   background-color: #1478c7;
-	   color: #dde4ee;
-	   padding-top: 8px;
-	   padding-bottom: 8px;
+		font-size: 1em;
+		padding-top: 8px;
+		padding-bottom: 8px;
 	}
+}
+
 	
-	#localVideo {
+	
+	
+#localVideo {
 	width: 80%;
 	margin-left:10%;
-	}
-	
-	.mtginputs {
-	   border-radius: 3px;
-	   font-size: 1.3em;
-	   padding: 2px;
-	}
-	
-	#muteControls label {
+}
+
+.mtginputs {
+	border-radius: 3px;
+	font-size: 1.3em;
+	padding: 2px;
+}
+
+#muteControls label {
 	padding: 5px;
-	}
-	
-	
+}
+
+
 </style>
 
 <script type="text/javascript">
@@ -142,12 +179,12 @@ function clicked() {
 
 <body>
     <div id="media">
-		<div class="videodiv">
-			<p class="remvidtitle">Remote Video</p>
+		<div class="videodiv remotevid">
+			<p class="vidtitle remvidtitle">Remote Video</p>
 			<video id="remoteVideo"></video>
 		</div>
 		<div class="videodiv localvid">
-			<div><p class="locvidtitle">Local Video</p></div>
+			<div><p class="vidtitle locvidtitle">Local Video</p></div>
 			<video id="localVideo"></video>
 		</div>
     </div>
