remap the video bandwidth options
change naming, and default to an economic 512Kbps

--- a/index.html
+++ b/index.html
@@ -225,10 +225,10 @@ function clicked() {
 					  <td>Video Quality:</td>
 					  <td><select id=videoBw>
 					    <option value="4096">HD (4096 Kbps)</option>
-					    <option value="2048">Hi (2048 Kbps)</option>
-					    <option value="1500" selected>Good (1500 Kbps)</option>
+					    <option value="2048">Very Hi (2048 Kbps)</option>
+					    <option value="1500">Hi (1500 Kbps)</option>
 					    <option value="1024">Mid (1024 Kbps)</option>
-					    <option value="512">Eco (512 Kbps)</option>
+					    <option value="512" selected>Eco (512 Kbps)</option>
 					    <option value="100">Low (100 Kbps)</option>
 						</select>
 					  </td>
