MAJOR: redesign for true SDK and simplicity
create new, simple bjnrtcsdk.js file:
Abstract all BJN-techy stuff here,  present simple API calls
create new EXAMPLE.js file
Collect all UI handlers here / make WEbRTC calls through new bjnrtcsdk

--- a/index.html
+++ b/index.html
@@ -171,11 +171,6 @@ fieldset {
 
 </style>
 
-<script type="text/javascript">
-function clicked() {
-  /*BJN.RTCManager.;*/
-  }
-</script>
 
 <body>
     <div id="media">
@@ -258,6 +253,7 @@ function clicked() {
 </body>
 <script data-main="requirejs-config.js" src="./external/require.js"></script>
 <script type="text/javascript">
+    // create global BJN sdk object
     var BJN = {
 
     };
