--- a/index.html
+++ b/index.html
@@ -1,261 +1,129 @@
-<!--
-    Test page for webRTC SDK
--->
 <!DOCTYPE html>
 <html>
-<meta name="viewport" content="width=device-width, initial-scale=1">
 <head>
-  <meta charset="UTF-8">
-  <title>WebRTC SDK Sample App</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>WebRTC SDK Sample App</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 
-<style type="text/css">
-
-body {
-	margin-left: 10px;
-	background-color: #dde4ee;
-}
-
-video {
-	margin: auto;
-	display: block;
-	vertical-align: middle;
-	width: 95%;
-	background: #444;
-	float: left;
-	border-radius: 20px;
-	text-align: center;
-	margin-left: 2%;
-	margin-bottom: 2%;
-}
-
-div#media {
-	overflow: hidden;
-}
-
-legend {
-	background-color: white;
-	font-size: 1.2em;
-	border-radius: 5px;
-	padding: 2px;
-}
-
-fieldset {
-	background-color: white;
-	border: 0px;
-	margin: 10px;
-	-moz-box-shadow:0px 0px 2px #808080;
-	-webkit-box-shadow:0px 0px 2px #808080;
-	box-shadow:0px 0px 2px #808080;
-	border-radius: 5px;
-}
-
-.controls {
-	border-radius: 5px;
-	font-size: 1.1em;
-	margin-top: 5px;
-	display: inline-block;
-}
-
-#joinMeeting{
-	background-color: #3ac97a;
-	border: none;
-	color: white;
-	padding: 5px 15px;
-	text-align: center;
-	text-decoration: none;
-	display: inline-block;
-}
-#joinMeeting:hover {
-	background-color: #dde4ee;
-	color: #204e74;
-}
-
-#leaveMeeting{
-	background-color: #204e74;
-	border: none;
-	color: white;
-	padding: 5px 15px;
-	text-align: center;
-	text-decoration: none;
-	display: inline-block;
-}
-#leaveMeeting:hover{
-	background-color: #dde4ee;
-	color: #204e74;
-}
-
-
-.videodiv {
-	background-color: white;  // #12a8f1;
-	margin: auto;
-	margin: 5px;
-	display: inline-block;
-	border-radius: 10px;
-	max-width: 800px;
-	-moz-box-shadow:0px 0px 7px #000000;
-	-webkit-box-shadow:0px 0px 7px #000000;
-	box-shadow:0px 0px 7px #000000;
-}
-
-.remotevid{
-	width: 100%;
-}
-
-
-.localvid {
-	width : 50%;
-	max-width: 150px;
-	margin-left: 25%;
-}
-
-
-.vidtitle {
-	text-align: center;
-	background-color: #1478c7;
-	color: #dde4ee;
-}
-
-.remvidtitle {
-	font-size: 1em;
-}
-
-
-.locvidtitle {
-	font-size: .7em;
-	padding-top: 1px;
-	padding-bottom: 1px;
-}
-
-@media only screen and (min-width: 768px) {
-	.remotevid{
-		width: 70%;
-	}
-	
-	.localvid {
-		width : 25%;
-		max-width: 250px;
-		margin-left: 5%;
-	}
-	
-	.remvidtitle {
-		font-size: 2em;
-	}
-
-
-	.locvidtitle {
-		font-size: 1em;
-		padding-top: 8px;
-		padding-bottom: 8px;
-	}
-}
-
-	
-	
-	
-#localVideo {
-	width: 80%;
-	margin-left:10%;
-}
-
-.mtginputs {
-	border-radius: 3px;
-	font-size: 1.3em;
-	padding: 2px;
-}
-
-#muteControls label {
-	padding: 5px;
-}
-
-
-</style>
-
-
 <body>
-    <div id="media">
-		<div class="videodiv remotevid">
-			<p class="vidtitle remvidtitle">Remote Video</p>
-			<video id="remoteVideo"></video>
+	<header>
+	  <div class="container">
+		<div class="header-bar">
+		    <a href="index.html"><img class="logo" src="bjn-developer-logo.svg" alt="Bluejeans"></a>
+		    <p>| &nbsp;WebRTC SDK Demo</p>		    
 		</div>
-		<div class="videodiv localvid">
-			<div><p class="vidtitle locvidtitle">Local Video</p></div>
-			<video id="localVideo"></video>
+		
+	</header>
+	<div class="container">
+		<section>
+			<div id="media">
+				<div class="videodiv remotevid">
+					<p class="vidtitle remvidtitle">Remote Video</p>
+					<video id="remoteVideo"></video>
+				</div>
+				<div class="videodiv localvid">
+					<div><p class="vidtitle locvidtitle">Local Video</p></div>
+					<video id="localVideo"></video>
+				</div>
+		    </div>
+		</section>
+		<section style="padding-top: 0px;">
+		    <div class="userMedia" id="localMediaControls">			    
+		        <fieldset>	
+			        <legend>Local Media Controls</legend>	            		
+		            <div id="muteControls" class="controls-set">
+		                <table class="widget-crl">
+			                <tr><td class="table-label" style="font-family: ProximaNova_Bold;">Mute Options:</td>
+		                        <td>
+			                        <button class="controls" id="toggleVideoMute">Mute Video</button>
+									<button class="controls" id="toggleAudioMute">Mute Audio</button>
+								</td>
+		                    </tr>
+		                	<tr><td class="table-label">Volume:</td>
+		                        <td><input type="text" class="mtginputs" id="volume" value=0 readonly></td>
+		                    </tr>
+		                </table>
+		                
+		            </div>		
+		        </fieldset>
+		    </div>
+
+		    <div class="userMedia" id="joinMeetingControls">
+		        <fieldset>
+		            <legend>Join Meeting Controls</legend>
+		            <div id="callControls" class="controls-set">
+		                <table class="widget-crl">
+		                    <tr><td class="table-label">Meeting ID:</td>
+		                        <td><input placeholder="Enter Meeting ID" type="text" class="mtginputs" id="id" name="Meeting id"></td>
+		                    </tr>
+							<tr><td class="table-label">PassCode:</td>
+		                        <td><input type="text" placeholder="Enter PassCode" class="mtginputs" id="passCode" name="PassCode" ></td>
+		                    </tr>
+							<tr><td class="table-label">Your Name:</td>
+		                        <td><input placeholder="Enter your name" type="text" class="mtginputs" 
+								id="yourName" name="yourName"
+								value="WebRTC User"></td>
+							</tr>
+							<tr><td class="table-label">Camera:</td>
+		                    <td><select id="videoIn">
+		
+		                        </select></td>
+							</tr>
+							<tr>
+							  <td class="table-label">Video Quality:</td>
+							  <td><select id="videoBw">
+							    <option value="4096">HD (4096 Kbps)</option>
+							    <option value="2048">Very Hi (2048 Kbps)</option>
+							    <option value="1500">Hi (1500 Kbps)</option>
+							    <option value="1024">Mid (1024 Kbps)</option>
+							    <option value="512" selected>Eco (512 Kbps)</option>
+							    <option value="100">Low (100 Kbps)</option>
+								</select>
+							  </td>
+							</tr>
+							<tr><td class="table-label">Microphone:</td>
+		                    <td><select id="audioIn">
+		                        </select></td>
+							</tr>
+		
+		                    <tr><td class="table-label">Speaker:</td>
+		                    <td><select id="audioOut">
+		
+		                        </select></td>
+							</tr>
+		                </table>
+		                <div class="control-btn-row">
+			                <button class="controls" id="joinMeeting">Join Meeting</button>
+			                <button class="controls hidden" id="leaveMeeting">End Meeting</button>
+		                </div>
+		            </div>
+		
+		        </fieldset>
+		    </div>
+		    <div class="clear"></div>
+		</section>
+	</div>
+	<footer>
+		<div class="container">
+			<p class="banner-link"><a href="https://github.com/bluejeans" target="_blank">BlueJeans on GitHub</a>
+		    <span>&nbsp; | &nbsp;</span> <a href="https://www.bluejeans.com" target="_blank">BlueJeans.com</a></p>
 		</div>
-    </div>
-
-    <div class="userMedia" id="localMediaControls">
-        <fieldset>
-            <legend>Local Media Controls</legend>
-
-            <div id="muteControls" class="controls-set">
-                <label>Mute Options</label>
-                <button class="controls" id="toggleVideoMute">Mute Video</button>
-                <button class="controls" id="toggleAudioMute">Mute Audio</button>
-				Volume:<input type="text" id="volume" value=0 readonly>
-            </div>
-
-        </fieldset>
-    </div>
-
-    <div class="userMedia" id="joinMeetingControls">
-        <fieldset>
-            <legend >Join Meeting Controls</legend>
-
-            <div id="callControls" class="controls-set">
-                <table><label>Call Setup Options:</label><br><br>
-
-                    <tr><td>Meeting ID:</td>
-                        <td><input type="text" class="mtginputs" id="id" name="Meeting id"></td>
-                    </tr>
-					<tr><td>PassCode:</td>
-                        <td><input type="text" class="mtginputs" id="passCode" name="PassCode" ></td>
-                    </tr>
-					<tr><td>Camera:</td>
-                    <td><select id=videoIn>
-
-                        </select></td>
-					</tr>
-					<tr>
-					  <td>Video Quality:</td>
-					  <td><select id=videoBw>
-					    <option value="4096">HD (4096 Kbps)</option>
-					    <option value="2048">Very Hi (2048 Kbps)</option>
-					    <option value="1500">Hi (1500 Kbps)</option>
-					    <option value="1024">Mid (1024 Kbps)</option>
-					    <option value="512" selected>Eco (512 Kbps)</option>
-					    <option value="100">Low (100 Kbps)</option>
-						</select>
-					  </td>
-					</tr>
-					<tr><td>Microphone:</td>
-                    <td><select id=audioIn>
-                      <!--option>inbuilt microphone</option>
-                      <option>headphone</option>
-                      <option>mic</option-->
-                        </select></td>
-					</tr>
-
-                    <tr><td>Speaker:</td>
-                    <td><select id=audioOut>
-
-                        </select></td>
-					</tr>
-
-                    <tr><td><button class="controls" id="joinMeeting">Join Meeting</button></td>
-                        <td><button class="controls" id="leaveMeeting">End Meeting(WIP)</button></td>
-					</tr>
-                </table>
-            </div>
-
-        </fieldset>
-    </div>
-</body>
-<script data-main="requirejs-config.js" src="./external/require.js"></script>
+		<div class="copyright">
+			<p>© <span id="curr_year"></span> Copyright BlueJeans Network. All Rights Reserved.</p>
+  		</div>
+	</footer>
+	<script src="external/jquery.min.js"></script>
+<script data-main="requirejs-config.js" src="external/require.js"></script>
 <script type="text/javascript">
     // create global BJN sdk object
     var BJN = {
 
     };
+    var d = new Date();
+	var n = d.getFullYear();
+	$("#curr_year").text(n);
 </script>
+</body>
 </html>
