--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	  <div class="container">
 		<div class="header-bar">
 		    <a href="index.html"><img class="logo" src="bjn-developer-logo.svg" alt="Bluejeans"></a>
-		    <p>| &nbsp;WebRTC SDK Demo</p>		    
+		    <p>| &nbsp;WebRTC SDK Reference Application</p>		    
 		</div>
 		
 	</header>
@@ -49,7 +49,6 @@
 		            </div>		
 		        </fieldset>
 		    </div>
-
 		    <div class="userMedia" id="joinMeetingControls">
 		        <fieldset>
 		            <legend>Join Meeting Controls</legend>
@@ -102,10 +101,22 @@
 		
 		        </fieldset>
 		    </div>
+			<div class="userMedia" id="contentShare">
+				<div class="videodiv contentdiv" style="overflow:hidden;">
+					<p class="vidtitle remvidtitle">Content Share</p>
+					<div class="novideo" id="noshare">
+						<img id="noContent" class="offair" src="media/BlueJeans_Mark.png" />
+						<video id="contentVideo"></video>
+					</div>
+				</div>
+			</div>			
 		    <div class="clear"></div>
 		</section>
 	</div>
 	<footer>
+		<div class="copyright">
+		   <p>SDK Version: <span id="sdkversion"></span> </p>
+		</div>
 		<div class="container">
 			<p class="banner-link"><a href="https://github.com/bluejeans" target="_blank">BlueJeans on GitHub</a>
 		    <span>&nbsp; | &nbsp;</span> <a href="https://www.bluejeans.com" target="_blank">BlueJeans.com</a></p>
