--- a/index.html
+++ b/index.html
@@ -22,10 +22,23 @@
 				<div class="videodiv remotevid">
 					<p class="vidtitle remvidtitle">Remote Video</p>
 					<video id="remoteVideo"></video>
+					<div id="wait4agent">
+					  <img id="waitimg" src="./media/circle.svg"/> 
+					  <p id="waittext">Please Wait for <i>Someone</i> to Join</p>
+					</div>
+					
 				</div>
 				<div class="videodiv localvid">
 					<div><p class="vidtitle locvidtitle">Local Video</p></div>
 					<video id="localVideo"></video>
+				</div>
+				<div class="videodiv roster">
+					<div><p class="vidtitle">Roster</p></div>
+					<div id="plist">
+					  <table id="parties">
+					    <tr></tr>
+					  </table>					
+					</div>
 				</div>
 		    </div>
 		</section>
